tests/baselines/reference/inheritSameNamePropertiesWithDifferentVisibility.errors.txt
==== tests/cases/compiler/inheritSameNamePropertiesWithDifferentVisibility.ts (1 errors) ====
    class C {
        public x: number;
    }
    
    class C2 {
        private x: number;
    }
    
    interface A extends C, C2 { // error
              ~
!!! inheritSameNamePropertiesWithDifferentVisibility.ts(9,11): error TS2189: Interface 'A' cannot simultaneously extend types 'C' and 'C2':
!!! Named properties 'x' of types 'C' and 'C2' are not identical.
        y: string;
    }